<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
             tools:ignore="MissingTranslation">
    <string name="app_name">What\'s Dish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setAllergies">Please select allergen</string>
    <string name="alertDialog">It contains the following ingredients.</string>
    <string name="takePicture">Please shoot the menu with the camera.</string>

    <string name="vision_api_key">AIzaSyDw2fiDn5S5njXvVDqjSemD2La-8OSI_3w</string>

    <string name="button_next">next</string>
    <string name="button_before">before</string>
    <string name="pageSkip">skip</string>
    <string name="start">start</string>
    <string name="close">close</string>

    <!-- 画面メッセージ -->
    <string name="loading_message">画像を解析中です</string>
    <string name="dialog_select_prompt">画像を選択してください</string>
    <string name="dialog_select_camera">カメラ</string>

    <!-- エラーメッセージ -->
    <string name="call_api_error">Cloud Vision APIの呼び出しに失敗しました</string>
    <string name="image_picker_error">イメージの読み込みに失敗しました</string>
    <string name="text_detection_error">文字が含まれていません</string>

    <!--解析結果-->
    <string name="can_eat_food">Can eat</string>
    <string name="cannot_eat_food">Cannot eat</string>

    <!--料理の詳細画面-->
    <string name="mat">Mat</string>
    <string name="detail">Detail</string>

    <!--説明文-->
    <string name="explain1">
        Please shoot the menu with the camera.
    </string>
    <string name="explain2">
        Read the name of the dish from the menu you shot.\nAnd based on your settings, the app will distinguish what you can eat and what you can not eat
    </string>
    <string name="explain3">
        Tap on the list of dishes to display a detailed explanation.
    </string>

    <!--アレルギー設定-->
    <string name="set_allergies">
        Please select your allergen.
    </string>
    <!--宗教設定-->
    <string name="set_religion">
        Please set up your religion.
    </string>
    <!--食べられないもの設定-->
    <string name="set_cantEat">
        Please select ingredients you can not eat.
    </string>
    <!--質問言語設定-->
    <string name="otherLan">
        Please choose the language of the person you are asking questions.
    </string>
    <string name="myLan">
        Please choose your language.
    </string>


    <string name="title_canEat">can be eaten</string>
    <string name="title_cannotEat">can not be eaten</string>
    <string name="title_notifications">Notifications</string>
    <string name="compete_parse">Analysis completed</string>
    <string name="missing_parse">No matching data</string>

    <string name="religion_0">buddhism</string>
    <string name="religion_1">christ</string>
    <string name="religion_2">hinduism</string>
    <string name="religion_3">islam</string>
    <string name="religion_4">judaism</string>
    <string name="religion_5">shinto</string>

    <string name="allergies_0">shrimp</string>
    <string name="allergies_1">crab</string>
    <string name="allergies_2">buckwheat</string>
    <string name="allergies_3">wheat</string>
    <string name="allergies_4">egg</string>
    <string name="allergies_5">milk</string>
    <string name="allergies_6">peanuts</string>
    <string name="allergies_7">squid</string>
    <string name="allergies_8">salmon_roe</string>
    <string name="allergies_9">orange</string>
    <string name="allergies_10">cashewnuts</string>
    <string name="allergies_11">kiwi</string>
    <string name="allergies_12">cow</string>
    <string name="allergies_13">walnut</string>
    <string name="allergies_14">sesame</string>
    <string name="allergies_15">fish</string>
    <string name="allergies_16">soy</string>
    <string name="allergies_17">chicken</string>
    <string name="allergies_18">banana</string>
    <string name="allergies_19">mushroom</string>
    <string name="allergies_20">pig</string>
    <string name="allergies_21">peach</string>
    <string name="allergies_22">yam</string>
    <string name="allergies_23">apple</string>
    <string name="allergies_24">gelatin</string>

    <string name="shrimp">shrimp</string>
    <string name="crab">crab</string>
    <string name="buckwheat">buckwheat</string>
    <string name="wheat">wheat</string>
    <string name="egg">egg</string>
    <string name="milk">milk</string>
    <string name="peanuts">peanuts</string>
    <string name="squid">squid</string>
    <string name="salmon_roe">salmon roe</string>
    <string name="orange">orange</string>
    <string name="cashewnuts">cashew nut</string>
    <string name="kiwi">kiwi</string>
    <string name="cow">cow</string>
    <string name="walnut">walnut</string>
    <string name="sesame">sesame</string>
    <string name="fish">fish</string>
    <string name="soy">soy</string>
    <string name="chicken">chicken</string>
    <string name="banana">banana</string>
    <string name="mushroom">mushroom</string>
    <string name="pig">pig</string>
    <string name="peach">peach</string>
    <string name="yam">yam</string>
    <string name="apple">apple</string>
    <string name="gelatin">gelatin</string>

    <string name="shrimp_en">shrimp</string>
    <string name="crab_en">crab</string>
    <string name="buckwheat_en">buckwheat</string>
    <string name="wheat_en">wheat</string>
    <string name="egg_en">egg</string>
    <string name="milk_en">milk</string>
    <string name="peanuts_en">peanuts</string>
    <string name="squid_en">squid</string>
    <string name="salmon_roe_en">salmon roe</string>
    <string name="orange_en">orange</string>
    <string name="cashewnuts_en">cashew nut</string>
    <string name="kiwi_en">kiwi</string>
    <string name="cow_en">cow</string>
    <string name="walnut_en">walnut</string>
    <string name="sesame_en">sesame</string>
    <string name="fish_en">fish</string>
    <string name="soy_en">soy</string>
    <string name="chicken_en">chicken</string>
    <string name="banana_en">banana</string>
    <string name="mushroom_en">mushroom</string>
    <string name="pig_en">pig</string>
    <string name="peach_en">peach</string>
    <string name="yam_en">yam</string>
    <string name="apple_en">apple</string>
    <string name="gelatin_en">gelatin</string>


    <string name="shrimp_ja">エビ</string>
    <string name="crab_ja">カニ</string>
    <string name="buckwheat_ja">そば</string>
    <string name="wheat_ja">小麦</string>
    <string name="egg_ja">卵</string>
    <string name="milk_ja">牛乳</string>
    <string name="peanuts_ja">ピーナッツ</string>
    <string name="squid_ja">イカ</string>
    <string name="salmon_roe_ja">いくら</string>
    <string name="orange_ja">オレンジ</string>
    <string name="cashewnuts_ja">カシューナッツ</string>
    <string name="kiwi_ja">キウイ</string>
    <string name="cow_ja">牛</string>
    <string name="walnut_ja">くるみ</string>
    <string name="sesame_ja">ごま</string>
    <string name="fish_ja">魚</string>
    <string name="soy_ja">大豆</string>
    <string name="chicken_ja">鶏</string>
    <string name="banana_ja">バナナ</string>
    <string name="mushroom_ja">きのこ</string>
    <string name="pig_ja">豚</string>
    <string name="peach_ja">もも</string>
    <string name="yam_ja">やまいも</string>
    <string name="apple_ja">りんご</string>
    <string name="gelatin_ja">ゼラチン</string>

    <string name="shrimp_tw">蝦仁</string>
    <string name="crab_tw">螃蟹</string>
    <string name="buckwheat_tw">蕎麥</string>
    <string name="wheat_tw">小麥</string>
    <string name="egg_tw">雞蛋</string>
    <string name="milk_tw">牛奶</string>
    <string name="peanuts_tw">花生</string>
    <string name="squid_tw">烏賊</string>
    <string name="salmon_roe_tw">鮭魚子</string>
    <string name="orange_tw">橙</string>
    <string name="cashewnuts_tw">腰果</string>
    <string name="kiwi_tw">獼猴桃</string>
    <string name="cow_tw">牛肉</string>
    <string name="walnut_tw">核桃</string>
    <string name="sesame_tw">芝麻</string>
    <string name="fish_tw">魚</string>
    <string name="soy_tw">黃豆</string>
    <string name="chicken_tw">雞肉</string>
    <string name="banana_tw">香蕉</string>
    <string name="mushroom_tw">洋蘑菇</string>
    <string name="pig_tw">豬肉</string>
    <string name="peach_tw">桃子</string>
    <string name="yam_tw">山藥</string>
    <string name="apple_tw">蘋果</string>
    <string name="gelatin_tw">明膠</string>

    <string name="shrimp_cn">虾仁</string>
    <string name="crab_cn">螃蟹</string>
    <string name="buckwheat_cn">荞麦</string>
    <string name="wheat_cn">小麦</string>
    <string name="egg_cn">鸡蛋</string>
    <string name="milk_cn">牛奶</string>
    <string name="peanuts_cn">花生</string>
    <string name="squid_cn">乌贼</string>
    <string name="salmon_roe_cn">鲑鱼子</string>
    <string name="orange_cn">橙</string>
    <string name="cashewnuts_cn">腰果</string>
    <string name="kiwi_cn">猕猴桃</string>
    <string name="cow_cn">牛肉</string>
    <string name="walnut_cn">核桃</string>
    <string name="sesame_cn">芝麻</string>
    <string name="fish_cn">鱼</string>
    <string name="soy_cn">黄豆</string>
    <string name="chicken_cn">鸡肉</string>
    <string name="banana_cn">香蕉</string>
    <string name="mushroom_cn">洋蘑菇</string>
    <string name="pig_cn">猪肉</string>
    <string name="peach_cn">桃子</string>
    <string name="yam_cn">山药</string>
    <string name="apple_cn">苹果</string>
    <string name="gelatin_cn">明胶</string>

    <string name="buddhism">buddhism</string>
    <string name="christ">christ</string>
    <string name="hinduism">hinduism</string>
    <string name="islam">islam</string>
    <string name="judaism">judaism</string>
    <string name="shinto">shinto</string>

    <!--質問-->
    <string name="question_ja">
        私には食物アレルギーがあります。アレルゲンを食べることができません。このメニューには、これらのアレルゲンが入っていますか?
    </string>
    <string name="question_en">
        I have food allergies.I must avoid allergens.Does this dish contain any of these allergens?
    </string>
    <string name="question_cn">
        我有食物过敏，不能吃变应素。
        这个菜里有变应素成分吗？
    </string>
    <string name="question_tw">
        我有食物過敏，不能吃變應素。
        這個菜里有變應素嗎?
    </string>

    <!--回答1-->
    <string name="answer1_ja">
        アレルゲンは含まれていません。\n
        食べることができます。
    </string>
    <string name="answer1_en">
        allergies FREE.
        You can eat.
    </string>
    <string name="answer1_cn">
        菜中没有变应素成分。您可以吃。
    </string>
    <string name="answer1_tw">
        菜中沒有變應素成分。您可以吃。
    </string>

    <!--回答2-->
    <string name="answer2_ja">
        申し訳ございません。
        食べることができません。
    </string>
    <string name="answer2_en">
        sorry.You can not eat.
    </string>
    <string name="answer2_cn">
        真对不起，这个菜不能吃。
    </string>
    <string name="answer2_tw">
        真對不起，這個菜不能吃。
    </string>

    <!--質問2-->
    <string name="question2_ja">
        どのメニューであれば食べることができますか？
    </string>
    <string name="question2_en">
        Which menu can I eat?
    </string>
    <string name="question2_cn">
        哪些菜可以吃？
    </string>
    <string name="question2_tw">
        哪些菜可以吃哪些菜可以吃？
    </string>

    <string name="yes_ja">はい</string>
    <string name="yes_cn">是</string>
    <string name="yes_en">yes</string>
    <string name="yes_tw">是</string>

    <string name="no_ja">いいえ</string>
    <string name="no_cn">没有</string>
    <string name="no_en">no</string>
    <string name="no_tw">沒有</string>

    <string name="nav_allergies">Allergen</string>
    <string name="nav_jpn_ingredient_list">Japanese ingredients</string>
    <string name="nav_cant_eat">Can not be eaten</string>
    <string name="nav_religion">Religion</string>

</resources>