<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/explain_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain1"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/explain_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/take_photo"/>

    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_button"
        android:text="@string/button_next"
        android:textColor="@color/colortext1"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pageSkip"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>