<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/explain_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/instead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="//ここに画像を置く"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/explain_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/buttonBefore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_before"
        android:background="@drawable/next_button"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colortext1"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/buttonNext2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:background="@drawable/next_button"
        android:textColor="@color/colortext1"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/buttonBefore1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>