<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--仏教-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/buddhism"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/christ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bukkyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buddhism"
        app:layout_constraintLeft_toLeftOf="@+id/buddhism"
        app:layout_constraintRight_toRightOf="@+id/buddhism"
        app:layout_constraintTop_toBottomOf="@+id/buddhism" />

    <!--キリスト教-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/christ"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/hinduism"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buddhism"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kirisuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/christ"
        app:layout_constraintLeft_toLeftOf="@id/christ"
        app:layout_constraintRight_toRightOf="@+id/christ"
        app:layout_constraintTop_toBottomOf="@+id/christ" />

    <!--ヒンドゥー教-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/hinduism"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/christ"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hinduism"
        app:layout_constraintLeft_toLeftOf="@id/hinduism"
        app:layout_constraintRight_toRightOf="@id/hinduism"
        app:layout_constraintTop_toBottomOf="@+id/hinduism" />

    <!--イスラム教-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/islam"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@id/judaism"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bukkyou" />
    <TextView
        android:id="@+id/isuramu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/islam"
        app:layout_constraintTop_toBottomOf="@id/islam"
        app:layout_constraintRight_toRightOf="@id/islam"
        app:layout_constraintLeft_toLeftOf="@id/islam"/>


    <!--ユダヤ教-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/judaism"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/kirisuto"
        app:layout_constraintStart_toEndOf="@id/islam"
        app:layout_constraintEnd_toStartOf="@id/shinto"/>
    <TextView
        android:id="@+id/yudaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judaism"
        app:layout_constraintTop_toBottomOf="@+id/judaism"
        app:layout_constraintRight_toRightOf="@id/judaism"
        app:layout_constraintLeft_toLeftOf="@id/judaism"/>


    <!--神道-->
    <com.example.shirokuma.whatsdish.ReligionButton
        android:id="@+id/shinto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/hindo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/judaism"
        />
    <TextView
        android:id="@+id/sindou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shinto"
        app:layout_constraintTop_toBottomOf="@id/shinto"
        app:layout_constraintRight_toRightOf="@id/shinto"
        app:layout_constraintLeft_toLeftOf="@id/shinto"/>

    <!--<Button-->
        <!--android:id="@+id/allergy_question"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:text="アレルギーの質問画面"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/isuramu"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--/>-->

    <!--<Button-->
        <!--android:id="@+id/religion_question"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:text="宗教質問画面"-->
        <!--app:layout_constraintTop_toBottomOf="@id/allergy_question"-->
        <!--app:layout_constraintStart_toStartOf="parent"/>-->

</android.support.constraint.ConstraintLayout>